# PivotingQR

./: CMakeLists.txt  main.cpp
